--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="5;url=https://www.navan.one">
+    <script>
+        setTimeout(function() {
+            window.location.href = "https://www.navan.one";
+        }, 5000); // 5000 milliseconds (5 seconds) delay before redirection
+    </script>
 </head>
 <body>
     <p>If you are not redirected, <a href="https://www.navan.one">click here</a>.</p>
