--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script>
          window.location.href = "https://www.navan.one";
+    </script>
 </head>
 <body>
     <p>If you are not redirected, <a href="https://www.navan.one">click here</a>.</p>
